--- a/src/QuickApp/ClientApp/src/app/assets/locale/ua.json
+++ b/src/QuickApp/ClientApp/src/app/assets/locale/ua.json
@@ -1,6 +1,6 @@
 ﻿{
     "app": {
-        "Welcome": "Kаскаво просимо",
+        "Welcome": "Ласкаво просимо",
         "New": "Новий"
     },
     "mainMenu": {
@@ -39,8 +39,8 @@
         "Language": "Мова:",
         "English": "Англійська",
         "Ukrainian": "Українська",
-        "Russian": "Російський",
-        "Poland": "Польский",
+        "Russian": "Російська",
+        "Poland": "Польська",
         "LanguageHint": "Виберіть мову для свого профілю",
         "HomePage": "Головна:",
         "About": "О",
